Bug 611033 - Don't retain the plugin surface beyond the lifetime of the PluginInstanceParent: we only guarantee that the plugin X socket will kept alive until PluginModuleParent::ActorDestroy, r=karlt